2006-01-21  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added HP Photosmart E317
	* library.c: Relaxed Association checks for directories.
	  The E317 sees AssocType 0x0 (undefined) for DCIM/ et.al.

2006-01-17  Marcus Meissner  <marcus@jet.franken.de>

	* ptp-parse.pl: parse binary SnoopyPro / usbsnoop logs too.

	* PTPIP.TXT: enhanced. PTP/IP uses actually 2 tcp/ip connections.

2006-01-16  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added progress bar support for
	  downloads and uploads. Contributed by 
	  Dave O <cxreg@pobox.com>.

	* ptp.c, ptp.h, library.c: Print MTP object properties
	  in --summary

2006-01-14  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.c, ptp.h: more --summary output.
	  List OFC codes now.

	* library.c:
	  Cleaned up config function parameter lists.
	  Need to property desc on "put" too (for Focal Length
	  currently).
	  Replaced 19 tablelookup based functions doing
	  the same by 2.

	  Implemented configuration for:
		- FocalLength
		- FocusMode

2006-01-12  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c, ptp-pack.c:
	  Unpack all members of the StorageInfo structure.
	  Add Storage summary to --summary output.

2006-01-11  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Also split ptp writes into 4k chunks
	  to avoid lowlevel timeouts.

2006-01-09  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: added iRiver U10.

2006-01-08  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp-pack.c, ptp.h: Enhanced ptp_nikon_check_event(),
	  unpack event list.

2006-01-06  Marcus Meissner  <marcus@jet.franken.de>

	* PTPIP.TXT: describes PTP/IP communication basics.
	  

2006-01-05  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Removed one unnecessary line of code.
	  Use event_check instead of event_wait for now in
	  canon specific delete code.
	  Added Fuji Finepix E900/PictBridge id.

	* library.c: Added Philipps HDD6320 MTP player.
