@@ -3,6 +3,8 @@
 	* library.c: Added HP Photosmart E317
 	* library.c: Relaxed Association checks for directories.
 	  The E317 sees AssocType 0x0 (undefined) for DCIM/ et.al.
+	
+	  Avoid buffer overflows on too long filenames.
 
 2006-01-17  Marcus Meissner  <marcus@jet.franken.de>
 
